--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ license = MIT
 url = http://github.com/adrn/twoface
 edit_on_github = False
 github_project = adrn/twoface
-install_requires = astropy, sqlalchemy
+install_requires = astropy
 # version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
 version = 0.1.dev
 
