--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ services:
   - postgresql
 
 python:
-    - 2.7
+    # - 2.7
     - 3.5
-    - 3.6
+    # - 3.6
 
 # Setting sudo to false opts in to Travis-CI container-based builds.
 sudo: false
@@ -56,32 +56,28 @@ matrix:
     include:
 
         # Do a coverage test in Python 2.
-        - python: 2.7
-          env: SETUP_CMD='test --coverage'
+        # - python: 2.7
+        #   env: SETUP_CMD='test --coverage'
 
         # Check for sphinx doc build warnings - we do this first because it
         # may run for a long time
         # - python: 2.7
         #   env: SETUP_CMD='build_sphinx -w'
 
-        - python: 2.7
-          env: ASTROPY_VERSION=lts
-        - python: 3.5
-          env: ASTROPY_VERSION=lts
-
-        # Try numpy pre-release
-        - python: 3.5
-          env: NUMPY_VERSION=prerelease
+        # - python: 2.7
+        #   env: ASTROPY_VERSION=lts
+        # - python: 3.5
+        #   env: ASTROPY_VERSION=lts
 
         # Do a PEP8 test with pycodestyle
-        - python: 3.5
-          env: MAIN_CMD='pycodestyle packagename --count' SETUP_CMD=''
+        # - python: 3.5
+        #   env: MAIN_CMD='pycodestyle packagename --count' SETUP_CMD=''
 
-    allow_failures:
-        # Do a PEP8 test with pycodestyle
-        # (allow to fail unless your code completely compliant)
-        - python: 3.5
-          env: MAIN_CMD='pycodestyle packagename --count' SETUP_CMD=''
+    # allow_failures:
+    #     # Do a PEP8 test with pycodestyle
+    #     # (allow to fail unless your code completely compliant)
+    #     - python: 3.5
+    #       env: MAIN_CMD='pycodestyle packagename --count' SETUP_CMD=''
 
 install:
     - git clone git://github.com/astropy/ci-helpers.git
