--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ env:
         # For this package-template, we include examples of Cython modules,
         # so Cython is required for testing. If your package does not include
         # Cython code, you can set CONDA_DEPENDENCIES=''
-        - CONDA_DEPENDENCIES='pyyaml sqlalchemy'
+        - CONDA_DEPENDENCIES='pyyaml sqlalchemy psycopg2'
 
         - CONDA_CHANNELS='astropy-ci-extras astropy'
 
