--- a/environment.yml
+++ b/environment.yml
@@ -15,5 +15,5 @@ dependencies:
   - pip:
     - emcee
     - corner
-    # - git+https://github.com/adrn/thejoker
+    - git+https://github.com/adrn/thejoker
 
