change config defaults

--- a/twoface/config/defaults.cfg
+++ b/twoface/config/defaults.cfg
@@ -1,3 +1,10 @@
+[apogee]
+user = postgres
+host = localhost
+database = apogee
+port = 5432
+password =
+
 [testing]
 user = postgres
 host = localhost
