--- a/.travis.yml
+++ b/.travis.yml
@@ -84,10 +84,8 @@ install:
     - source ci-helpers/travis/setup_conda_$TRAVIS_OS_NAME.sh
 
 before_script:
-   - cp twoface/db/tests/travis_db.cfg ~/.twoface_config
-   - cd scripts/
-   - if [[ $SETUP_CMD != *"egg_info"* ]]; then python initdb.py --test -v; fi
-   - cd ..
+   - cp twoface/db/tests/travis_db.cfg ~/.config/twoface/twoface.cfg
+   - if [[ $SETUP_CMD != *"egg_info"* ]]; then python scripts/initdb.py --test -v; fi
 
 script:
    - $MAIN_CMD $SETUP_CMD
