--- a/run_config/test.yml
+++ b/run_config/test.yml
@@ -8,4 +8,4 @@ hyperparams:
 prior:
   max_samples: 1048576
   num_cache: 2097152
-  cache_file: P8-8192_prior_samples.hdf5
+  samples_file: P8-8192_prior_samples.hdf5
