--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,9 @@ env:
         # so Cython is required for testing. If your package does not include
         # Cython code, you can set CONDA_DEPENDENCIES=''
         - CONDA_DEPENDENCIES='pyyaml sqlalchemy'
-
         - CONDA_CHANNELS='astropy-ci-extras astropy'
+
+        - BUILD_PAPER='false'
 
     matrix:
         # Make sure that egg_info works without dependencies
@@ -51,6 +52,10 @@ matrix:
     fast_finish: true
 
     include:
+
+        # compile the latex to make a PDF of the paper
+        - os: linux
+          env: BUILD_PAPER='true'
 
         # Do a coverage test in Python 2.
         # - python: 2.7
@@ -86,7 +91,12 @@ before_script:
     - if [[ $SETUP_CMD != *"egg_info"* ]]; then python scripts/initdb.py --test -v; fi
 
 script:
-   - $MAIN_CMD $SETUP_CMD
+   - if [[ $BUILD_PAPER == true ]]
+   - then
+   -   source ci/build-paper.sh
+   - else
+   -   $MAIN_CMD $SETUP_CMD
+   - fi
 
 after_success:
     # If coveralls.io is set up for this package, uncomment the line
