--- a/.travis.yml
+++ b/.travis.yml
@@ -87,6 +87,8 @@ install: |
         git clone git://github.com/astropy/ci-helpers.git
         source ci-helpers/travis/setup_conda_$TRAVIS_OS_NAME.sh
         if [[ $SETUP_CMD != *"egg_info"* ]]; then python setup.py install; fi
+    else
+        source ci/setup-paper.sh
     fi
 
 before_script: |
