--- a/.travis.yml
+++ b/.travis.yml
@@ -83,12 +83,12 @@ matrix:
     #       env: MAIN_CMD='pycodestyle packagename --count' SETUP_CMD=''
 
 install: |
-    if [[ $BUILD_PAPER != true ]]; then
+    if [[ $BUILD_PAPER == true ]]; then
+        source ci/setup-paper.sh
+    else
         git clone git://github.com/astropy/ci-helpers.git
         source ci-helpers/travis/setup_conda_$TRAVIS_OS_NAME.sh
         if [[ $SETUP_CMD != *"egg_info"* ]]; then python setup.py install; fi
-    else
-        source ci/setup-paper.sh
     fi
 
 before_script: |
