--- a/.travis.yml
+++ b/.travis.yml
@@ -112,6 +112,7 @@ script: |
         $MAIN_CMD $SETUP_CMD
         echo "NO3"
     fi
+    echo $BUILD_PAPER
 
 after_success:
     # If coveralls.io is set up for this package, uncomment the line
