--- a/.travis.yml
+++ b/.travis.yml
@@ -85,12 +85,10 @@ matrix:
 install: |
     if [[ $BUILD_PAPER == true ]]; then
         source ci/setup-paper.sh
-        echo "YES1"
     else
         git clone git://github.com/astropy/ci-helpers.git
         source ci-helpers/travis/setup_conda_$TRAVIS_OS_NAME.sh
         if [[ $SETUP_CMD != *"egg_info"* ]]; then python setup.py install; fi
-        echo "NO1"
     fi
 
 before_script: |
@@ -100,11 +98,10 @@ before_script: |
         if [[ $SETUP_CMD != *"egg_info"* ]]; then
             python scripts/initdb.py --test -v
         fi
-
-        echo "NO2"
     fi
 
 script: |
+    echo $BUILDING_PAPER
     if [[ $BUILD_PAPER == true ]]; then
         source ci/build-paper.sh
         echo "YES3"
@@ -112,7 +109,6 @@ script: |
         $MAIN_CMD $SETUP_CMD
         echo "NO3"
     fi
-    echo $BUILD_PAPER
 
 after_success:
     # If coveralls.io is set up for this package, uncomment the line
