--- a/run_config/redclump.yml
+++ b/run_config/redclump.yml
@@ -1,9 +1,12 @@
-name: redclump-130ms
+name: redclump-jitter
 database_file: apogee.sqlite
 hyperparams:
   P_min: 8 day
   P_max: 8192 day
   requested_samples_per_star: 1024 # M_min
+  jitter_prior_mean: 9.2 # ln(100 m/s)^2
+  jitter_prior_stddev: 3.
+  jitter_prior_unit: m/s
 prior:
   max_samples: 268435456
   num_cache: 536870912
