--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
     # - 2.7
     - 3.5
-    # - 3.6
+    - 3.6
 
 # Setting sudo to false opts in to Travis-CI container-based builds.
 sudo: false
@@ -35,7 +35,7 @@ env:
         # For this package-template, we include examples of Cython modules,
         # so Cython is required for testing. If your package does not include
         # Cython code, you can set CONDA_DEPENDENCIES=''
-        - CONDA_DEPENDENCIES='pyyaml sqlalchemy'
+        - CONDA_DEPENDENCIES='pyyaml sqlalchemy h5py'
         - CONDA_CHANNELS='astropy-ci-extras astropy'
 
         - BUILD_PAPER='false'
