--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ env:
         # For this package-template, we include examples of Cython modules,
         # so Cython is required for testing. If your package does not include
         # Cython code, you can set CONDA_DEPENDENCIES=''
-        - CONDA_DEPENDENCIES='pyyaml sqlalchemy h5py'
+        - CONDA_DEPENDENCIES='astropy pyyaml sqlalchemy h5py'
         - CONDA_CHANNELS='astropy-ci-extras astropy'
 
         - BUILD_PAPER='false'
