--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 
 python:
     # - 2.7
-    - 3.5
+    # - 3.5
     - 3.6
 
 # Setting sudo to false opts in to Travis-CI container-based builds.
@@ -35,7 +35,7 @@ env:
         # For this package-template, we include examples of Cython modules,
         # so Cython is required for testing. If your package does not include
         # Cython code, you can set CONDA_DEPENDENCIES=''
-        - CONDA_DEPENDENCIES='astropy pyyaml sqlalchemy h5py'
+        - CONDA_DEPENDENCIES='astropy pyyaml sqlalchemy h5py scipy'
         - CONDA_CHANNELS='astropy-ci-extras astropy'
 
         - BUILD_PAPER='false'
