--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,12 @@ env:
         - ASTROPY_VERSION=stable
         - MAIN_CMD='python setup.py'
         - SETUP_CMD='test'
-        - PIP_DEPENDENCIES='git+https://github.com/adrn/thejoker'
+        - PIP_DEPENDENCIES='git+https://github.com/adrn/thejoker git+https://github.com/adrn/schwimmbad emcee corner'
 
         # For this package-template, we include examples of Cython modules,
         # so Cython is required for testing. If your package does not include
         # Cython code, you can set CONDA_DEPENDENCIES=''
-        - CONDA_DEPENDENCIES='astropy pyyaml sqlalchemy h5py scipy'
+        - CONDA_DEPENDENCIES='numpy scipy matplotlib pyyaml sqlalchemy cython h5py astropy'
         - CONDA_CHANNELS='astropy-ci-extras astropy'
 
         - BUILD_PAPER='false'
