--- a/paper/2-population/Makefile
+++ b/paper/2-population/Makefile
@@ -5,7 +5,7 @@ RM          = rm -rf
 TMP_SUFFS   = pdf aux bbl blg log dvi ps eps out brf
 CHECK_RERUN =
 
-NAME = main
+NAME = twoface-pop
 
 all: ${NAME}.pdf
 
