--- a/run_config/apogee.yml
+++ b/run_config/apogee.yml
@@ -3,11 +3,11 @@ database_file: apogee.sqlite
 hyperparams:
   P_min: 8 day
   P_max: 32768 day
-  requested_samples_per_star: 128 # M_min
-  jitter_prior_mean: 5.
-  jitter_prior_stddev: 4.
+  requested_samples_per_star: 512 # M_min
+  jitter_prior_mean: 9.75 # See infer-jitter notebook
+  jitter_prior_stddev: 1.5
   jitter_prior_unit: m/s
 prior:
-  max_samples: 33554432
+  max_samples: 134217728 # 1/4 of total
   num_cache: 536870912
   samples_file: P8-32768_prior_samples.hdf5
