--- a/.travis.yml
+++ b/.travis.yml
@@ -54,9 +54,9 @@ matrix:
     include:
 
         # compile the latex to make a PDF of the paper
-        # - os: linux
-        #   env: BUILD_PAPER='true'
-        #   python: 3.5
+        - os: linux
+          env: BUILD_PAPER='true'
+          python: 3.6
 
         # Do a coverage test in Python 2.
         # - python: 2.7
